[project]
name = "dogbro-index-api"
version = "0.1.0"
description = "Dogbro Index API - Market Data Streaming Service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "shioaji>=1.2.5",
    "python-socketio[client]>=5.11.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
hello = "sj_trading:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
